1. Configuration IPCConnectTimeout, IPCCommTimeout, BusyTimeout can be overwrite in VirtualHost section
	(Thank cthulhu at planet-multiplayer.de for the suggestion)
2. Add EXTRA_CFLAGS = -I$(builddir) in Makefile
	(Thank contagion at gmail.com for the suggestion)
3. Support Apache 2.1 now (Patch by nick at webthing.com)
	(Thank nick at webthing.com for the excellent patch)

version 1.06 ( Apr 27th 2005 )
1. "DefaultInitEnv" now can be placed inside VirtualHost section
2. Bug fix. "FCGIWrapper" now stores in a per-directory config structure. (The old implementation
	stores it in a per-server config structure, which may be overwrited by another 
	<VirtualHost> section)
	(Thank phyre at rogers.com for bug report and the great help for the bug fix AGAIN)

version 1.05 ( Mar 4th 2005 )
1. Bug fix. suEXEC wrapper in virtualhost environment will shares the process interpreters.
	(Thank phyre at rogers.com for bug report and the great help for the bug fix)

version 1.04 ( Dec 2nd 2004 )
1. Bug fix. ap_scan_script_header_err_core can return non OK without errors.
	e.g. CGI outputs Last-Modified header and browser request with
	If-Mofieided-Since header, ap_scan_script_header_err_core() may
	returns 302(Not Modified)
	(Thank Tatsuki Sugiura, sugi at nemui.org for the bug fix patch)
2. Choose FCGI wrappers based on file extentions.
	e.g.
	FCGIWrapper /usr/local/bin/php .php
	Tells mod_fcgid calling all *.php scripts with wrapper /usr/local/bin/php.
	(Thank Mathijs Brands, mathijs at crooked.net for the suggestion)

verison 1.03 ( Nov 3rd 2004 )
1. Add configuration "OutputBufferSize". The old implementation keep CGI output in a 64k bytes buffer,
	before send them to web browser(for better network IO performance). 
	If FCGI_Fflush() is called in your application, please add "OutputBufferSize 0" in you 
	httpd.conf, which will not keep any CGI output in cache buffer.
	The default value of OutputBufferSize is 64k byte.
	(Thank Grzegorz Sampolski, gs at blink.pl)