@@ -14,6 +14,6 @@ typedef struct fcgid_bucket_ctx_t {
 extern const apr_bucket_type_t ap_bucket_type_fcgid_header;
 apr_bucket *ap_bucket_fcgid_header_create(apr_bucket_alloc_t * list,
 										  fcgid_bucket_ctx * ctx);
-apr_bucket *ap_bucket_fcgid_header_make(apr_bucket*, fcgid_bucket_ctx*);
+apr_bucket *ap_bucket_fcgid_header_make(apr_bucket *, fcgid_bucket_ctx *);
 
 #endif
